--- a/mock.ipynb
+++ b/mock.ipynb
@@ -16,6 +16,7 @@
     "5. Naive  >> It assumes that, Features are mutually independent(Input)\n",
     "6. Naive bayes is also called as Probabilistic algorithm\n",
     "7. We do use it mostly on Text classification, That means we can consider NLP Data."
+    "8 trial and error"
    ]
   },
   {
@@ -339,4 +340,4 @@
  "nbformat": 4,
  "nbformat_minor": 5
 }
-# change added
+
